// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correct content for 1 column found chapters 1`] = `
<Lexicon
  data={
    Array [
      Object {
        "name": "one.1",
        "opus": "one",
      },
      Object {
        "name": "two.2",
        "opus": "two",
      },
      Object {
        "name": "three.3",
        "opus": "three",
      },
    ]
  }
  mode="chapters1"
>
  <Styled(CardWrapper)
    border="primary"
    squareCorner={true}
  >
    <CardWrapper
      border="primary"
      className="sc-AxjAm cBrofV"
      squareCorner={true}
    >
      <Card
        body={false}
        border="primary"
        className="sc-AxjAm cBrofV"
      >
        <div
          className="sc-AxjAm cBrofV card border-primary"
        >
          <Styled(PanelHeader)
            bg="primary"
          >
            <PanelHeader
              bg="primary"
              className="sc-AxirZ KLmEG"
            >
              <CardHeader
                className="bg-primary text-white sc-AxirZ KLmEG"
              >
                <div
                  className="bg-primary text-white sc-AxirZ KLmEG card-header"
                >
                  <styled.div
                    noHover={true}
                  >
                    <div
                      className="sc-AxiKw JqPCR"
                    >
                      <styled.div>
                        <div
                          className="sc-AxgMl ljswtE"
                        >
                          Chapter
                        </div>
                      </styled.div>
                    </div>
                  </styled.div>
                </div>
              </CardHeader>
            </PanelHeader>
          </Styled(PanelHeader)>
          <LexiconList
            itemCount={3}
          >
            <Styled(List)
              height={120}
              itemCount={3}
              itemSize={40}
              width="100%"
            >
              <List
                className="sc-AxmLO cbeSvm"
                direction="ltr"
                height={120}
                itemCount={3}
                itemSize={40}
                layout="vertical"
                overscanCount={2}
                useIsScrolling={false}
                width="100%"
              >
                <div
                  className="sc-AxmLO cbeSvm"
                  onScroll={[Function]}
                  style={
                    Object {
                      "WebkitOverflowScrolling": "touch",
                      "direction": "ltr",
                      "height": 120,
                      "overflow": "auto",
                      "position": "relative",
                      "width": "100%",
                      "willChange": "transform",
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "height": 120,
                        "pointerEvents": undefined,
                        "width": "100%",
                      }
                    }
                  >
                    <FoundChaptersRow
                      index={0}
                      key="0"
                      style={
                        Object {
                          "height": 40,
                          "left": 0,
                          "position": "absolute",
                          "top": 0,
                          "width": "100%",
                        }
                      }
                    >
                      <WrapLink
                        item={
                          Object {
                            "name": "one.1",
                            "opus": "one",
                          }
                        }
                      >
                        <styled.div
                          style={
                            Object {
                              "height": 40,
                              "left": 0,
                              "position": "absolute",
                              "top": 0,
                              "width": "100%",
                            }
                          }
                        >
                          <div
                            className="sc-AxiKw fQaUdy"
                            style={
                              Object {
                                "height": 40,
                                "left": 0,
                                "position": "absolute",
                                "top": 0,
                                "width": "100%",
                              }
                            }
                          >
                            <styled.div>
                              <div
                                className="sc-AxgMl ljswtE"
                              >
                                one.1
                              </div>
                            </styled.div>
                          </div>
                        </styled.div>
                      </WrapLink>
                    </FoundChaptersRow>
                    <FoundChaptersRow
                      index={1}
                      key="1"
                      style={
                        Object {
                          "height": 40,
                          "left": 0,
                          "position": "absolute",
                          "top": 40,
                          "width": "100%",
                        }
                      }
                    >
                      <WrapLink
                        item={
                          Object {
                            "name": "two.2",
                            "opus": "two",
                          }
                        }
                      >
                        <styled.div
                          style={
                            Object {
                              "height": 40,
                              "left": 0,
                              "position": "absolute",
                              "top": 40,
                              "width": "100%",
                            }
                          }
                        >
                          <div
                            className="sc-AxiKw fQaUdy"
                            style={
                              Object {
                                "height": 40,
                                "left": 0,
                                "position": "absolute",
                                "top": 40,
                                "width": "100%",
                              }
                            }
                          >
                            <styled.div>
                              <div
                                className="sc-AxgMl ljswtE"
                              >
                                two.2
                              </div>
                            </styled.div>
                          </div>
                        </styled.div>
                      </WrapLink>
                    </FoundChaptersRow>
                    <FoundChaptersRow
                      index={2}
                      key="2"
                      style={
                        Object {
                          "height": 40,
                          "left": 0,
                          "position": "absolute",
                          "top": 80,
                          "width": "100%",
                        }
                      }
                    >
                      <WrapLink
                        item={
                          Object {
                            "name": "three.3",
                            "opus": "three",
                          }
                        }
                      >
                        <styled.div
                          style={
                            Object {
                              "height": 40,
                              "left": 0,
                              "position": "absolute",
                              "top": 80,
                              "width": "100%",
                            }
                          }
                        >
                          <div
                            className="sc-AxiKw fQaUdy"
                            style={
                              Object {
                                "height": 40,
                                "left": 0,
                                "position": "absolute",
                                "top": 80,
                                "width": "100%",
                              }
                            }
                          >
                            <styled.div>
                              <div
                                className="sc-AxgMl ljswtE"
                              >
                                three.3
                              </div>
                            </styled.div>
                          </div>
                        </styled.div>
                      </WrapLink>
                    </FoundChaptersRow>
                  </div>
                </div>
              </List>
            </Styled(List)>
          </LexiconList>
        </div>
      </Card>
    </CardWrapper>
  </Styled(CardWrapper)>
</Lexicon>
`;

exports[`renders correct content for 2 columns found chapters 1`] = `
<Lexicon
  data={
    Array [
      Object {
        "count": 1,
        "name": "one.1",
      },
      Object {
        "count": 0,
        "name": "two.2",
      },
      Object {
        "count": 2,
        "name": "three.3",
      },
    ]
  }
  mode="chapters2"
>
  <Styled(CardWrapper)
    border="primary"
    squareCorner={true}
  >
    <CardWrapper
      border="primary"
      className="sc-AxjAm cBrofV"
      squareCorner={true}
    >
      <Card
        body={false}
        border="primary"
        className="sc-AxjAm cBrofV"
      >
        <div
          className="sc-AxjAm cBrofV card border-primary"
        >
          <Styled(PanelHeader)
            bg="primary"
          >
            <PanelHeader
              bg="primary"
              className="sc-AxirZ KLmEG"
            >
              <CardHeader
                className="bg-primary text-white sc-AxirZ KLmEG"
              >
                <div
                  className="bg-primary text-white sc-AxirZ KLmEG card-header"
                >
                  <styled.div
                    noHover={true}
                  >
                    <div
                      className="sc-AxiKw JqPCR"
                    >
                      <styled.div>
                        <div
                          className="sc-AxgMl ljswtE"
                        >
                          Chapter
                        </div>
                      </styled.div>
                      <styled.div>
                        <div
                          className="sc-AxhUy erRXhU"
                        >
                          Qty
                        </div>
                      </styled.div>
                    </div>
                  </styled.div>
                </div>
              </CardHeader>
            </PanelHeader>
          </Styled(PanelHeader)>
          <LexiconList
            itemCount={3}
          >
            <Styled(List)
              height={120}
              itemCount={3}
              itemSize={40}
              width="100%"
            >
              <List
                className="sc-AxmLO cbeSvm"
                direction="ltr"
                height={120}
                itemCount={3}
                itemSize={40}
                layout="vertical"
                overscanCount={2}
                useIsScrolling={false}
                width="100%"
              >
                <div
                  className="sc-AxmLO cbeSvm"
                  onScroll={[Function]}
                  style={
                    Object {
                      "WebkitOverflowScrolling": "touch",
                      "direction": "ltr",
                      "height": 120,
                      "overflow": "auto",
                      "position": "relative",
                      "width": "100%",
                      "willChange": "transform",
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "height": 120,
                        "pointerEvents": undefined,
                        "width": "100%",
                      }
                    }
                  >
                    <FoundChaptersRow
                      index={0}
                      key="0"
                      style={
                        Object {
                          "height": 40,
                          "left": 0,
                          "position": "absolute",
                          "top": 0,
                          "width": "100%",
                        }
                      }
                    >
                      <WrapLink
                        item={
                          Object {
                            "count": 1,
                            "name": "one.1",
                          }
                        }
                      >
                        <styled.div
                          style={
                            Object {
                              "height": 40,
                              "left": 0,
                              "position": "absolute",
                              "top": 0,
                              "width": "100%",
                            }
                          }
                        >
                          <div
                            className="sc-AxiKw fQaUdy"
                            style={
                              Object {
                                "height": 40,
                                "left": 0,
                                "position": "absolute",
                                "top": 0,
                                "width": "100%",
                              }
                            }
                          >
                            <styled.div>
                              <div
                                className="sc-AxgMl ljswtE"
                              >
                                one.1
                              </div>
                            </styled.div>
                            <styled.div>
                              <div
                                className="sc-AxhUy erRXhU"
                              >
                                1
                              </div>
                            </styled.div>
                          </div>
                        </styled.div>
                      </WrapLink>
                    </FoundChaptersRow>
                    <FoundChaptersRow
                      index={1}
                      key="1"
                      style={
                        Object {
                          "height": 40,
                          "left": 0,
                          "position": "absolute",
                          "top": 40,
                          "width": "100%",
                        }
                      }
                    >
                      <WrapLink
                        item={
                          Object {
                            "count": 0,
                            "name": "two.2",
                          }
                        }
                      >
                        <styled.div
                          style={
                            Object {
                              "height": 40,
                              "left": 0,
                              "position": "absolute",
                              "top": 40,
                              "width": "100%",
                            }
                          }
                        >
                          <div
                            className="sc-AxiKw fQaUdy"
                            style={
                              Object {
                                "height": 40,
                                "left": 0,
                                "position": "absolute",
                                "top": 40,
                                "width": "100%",
                              }
                            }
                          >
                            <styled.div>
                              <div
                                className="sc-AxgMl ljswtE"
                              >
                                two.2
                              </div>
                            </styled.div>
                            <styled.div>
                              <div
                                className="sc-AxhUy erRXhU"
                              >
                                0
                              </div>
                            </styled.div>
                          </div>
                        </styled.div>
                      </WrapLink>
                    </FoundChaptersRow>
                    <FoundChaptersRow
                      index={2}
                      key="2"
                      style={
                        Object {
                          "height": 40,
                          "left": 0,
                          "position": "absolute",
                          "top": 80,
                          "width": "100%",
                        }
                      }
                    >
                      <WrapLink
                        item={
                          Object {
                            "count": 2,
                            "name": "three.3",
                          }
                        }
                      >
                        <styled.div
                          style={
                            Object {
                              "height": 40,
                              "left": 0,
                              "position": "absolute",
                              "top": 80,
                              "width": "100%",
                            }
                          }
                        >
                          <div
                            className="sc-AxiKw fQaUdy"
                            style={
                              Object {
                                "height": 40,
                                "left": 0,
                                "position": "absolute",
                                "top": 80,
                                "width": "100%",
                              }
                            }
                          >
                            <styled.div>
                              <div
                                className="sc-AxgMl ljswtE"
                              >
                                three.3
                              </div>
                            </styled.div>
                            <styled.div>
                              <div
                                className="sc-AxhUy erRXhU"
                              >
                                2
                              </div>
                            </styled.div>
                          </div>
                        </styled.div>
                      </WrapLink>
                    </FoundChaptersRow>
                  </div>
                </div>
              </List>
            </Styled(List)>
          </LexiconList>
        </div>
      </Card>
    </CardWrapper>
  </Styled(CardWrapper)>
</Lexicon>
`;

exports[`renders correct content for 2 columns lexicon 1`] = `
<Lexicon
  data={
    Array [
      Object {
        "c": 1,
        "w": "one",
      },
      Object {
        "c": 2,
        "w": "two",
      },
      Object {
        "c": 3,
        "w": "three",
      },
    ]
  }
  mode="lexicon2"
>
  <Styled(CardWrapper)
    border="primary"
    squareCorner={true}
  >
    <CardWrapper
      border="primary"
      className="sc-AxjAm cBrofV"
      squareCorner={true}
    >
      <Card
        body={false}
        border="primary"
        className="sc-AxjAm cBrofV"
      >
        <div
          className="sc-AxjAm cBrofV card border-primary"
        >
          <Styled(PanelHeader)
            bg="primary"
          >
            <PanelHeader
              bg="primary"
              className="sc-AxirZ KLmEG"
            >
              <CardHeader
                className="bg-primary text-white sc-AxirZ KLmEG"
              >
                <div
                  className="bg-primary text-white sc-AxirZ KLmEG card-header"
                >
                  <styled.div
                    noHover={true}
                  >
                    <div
                      className="sc-AxiKw JqPCR"
                    >
                      <styled.div>
                        <div
                          className="sc-AxhCb hnNexo"
                        >
                          Word
                        </div>
                      </styled.div>
                      <styled.div>
                        <div
                          className="sc-AxhUy erRXhU"
                        >
                          Qty
                        </div>
                      </styled.div>
                    </div>
                  </styled.div>
                </div>
              </CardHeader>
            </PanelHeader>
          </Styled(PanelHeader)>
          <LexiconList
            itemCount={3}
          >
            <Styled(List)
              height={120}
              itemCount={3}
              itemSize={40}
              width="100%"
            >
              <List
                className="sc-AxmLO cbeSvm"
                direction="ltr"
                height={120}
                itemCount={3}
                itemSize={40}
                layout="vertical"
                overscanCount={2}
                useIsScrolling={false}
                width="100%"
              >
                <div
                  className="sc-AxmLO cbeSvm"
                  onScroll={[Function]}
                  style={
                    Object {
                      "WebkitOverflowScrolling": "touch",
                      "direction": "ltr",
                      "height": 120,
                      "overflow": "auto",
                      "position": "relative",
                      "width": "100%",
                      "willChange": "transform",
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "height": 120,
                        "pointerEvents": undefined,
                        "width": "100%",
                      }
                    }
                  >
                    <LexiconRow
                      index={0}
                      key="0"
                      style={
                        Object {
                          "height": 40,
                          "left": 0,
                          "position": "absolute",
                          "top": 0,
                          "width": "100%",
                        }
                      }
                    >
                      <WrapLink
                        item={
                          Object {
                            "c": 1,
                            "w": "one",
                          }
                        }
                      >
                        <styled.div
                          style={
                            Object {
                              "height": 40,
                              "left": 0,
                              "position": "absolute",
                              "top": 0,
                              "width": "100%",
                            }
                          }
                        >
                          <div
                            className="sc-AxiKw fQaUdy"
                            style={
                              Object {
                                "height": 40,
                                "left": 0,
                                "position": "absolute",
                                "top": 0,
                                "width": "100%",
                              }
                            }
                          >
                            <styled.div>
                              <div
                                className="sc-AxhCb hnNexo"
                              >
                                one
                              </div>
                            </styled.div>
                            <styled.div>
                              <div
                                className="sc-AxhUy erRXhU"
                              >
                                1
                              </div>
                            </styled.div>
                          </div>
                        </styled.div>
                      </WrapLink>
                    </LexiconRow>
                    <LexiconRow
                      index={1}
                      key="1"
                      style={
                        Object {
                          "height": 40,
                          "left": 0,
                          "position": "absolute",
                          "top": 40,
                          "width": "100%",
                        }
                      }
                    >
                      <WrapLink
                        item={
                          Object {
                            "c": 2,
                            "w": "two",
                          }
                        }
                      >
                        <styled.div
                          style={
                            Object {
                              "height": 40,
                              "left": 0,
                              "position": "absolute",
                              "top": 40,
                              "width": "100%",
                            }
                          }
                        >
                          <div
                            className="sc-AxiKw fQaUdy"
                            style={
                              Object {
                                "height": 40,
                                "left": 0,
                                "position": "absolute",
                                "top": 40,
                                "width": "100%",
                              }
                            }
                          >
                            <styled.div>
                              <div
                                className="sc-AxhCb hnNexo"
                              >
                                two
                              </div>
                            </styled.div>
                            <styled.div>
                              <div
                                className="sc-AxhUy erRXhU"
                              >
                                2
                              </div>
                            </styled.div>
                          </div>
                        </styled.div>
                      </WrapLink>
                    </LexiconRow>
                    <LexiconRow
                      index={2}
                      key="2"
                      style={
                        Object {
                          "height": 40,
                          "left": 0,
                          "position": "absolute",
                          "top": 80,
                          "width": "100%",
                        }
                      }
                    >
                      <WrapLink
                        item={
                          Object {
                            "c": 3,
                            "w": "three",
                          }
                        }
                      >
                        <styled.div
                          style={
                            Object {
                              "height": 40,
                              "left": 0,
                              "position": "absolute",
                              "top": 80,
                              "width": "100%",
                            }
                          }
                        >
                          <div
                            className="sc-AxiKw fQaUdy"
                            style={
                              Object {
                                "height": 40,
                                "left": 0,
                                "position": "absolute",
                                "top": 80,
                                "width": "100%",
                              }
                            }
                          >
                            <styled.div>
                              <div
                                className="sc-AxhCb hnNexo"
                              >
                                three
                              </div>
                            </styled.div>
                            <styled.div>
                              <div
                                className="sc-AxhUy erRXhU"
                              >
                                3
                              </div>
                            </styled.div>
                          </div>
                        </styled.div>
                      </WrapLink>
                    </LexiconRow>
                  </div>
                </div>
              </List>
            </Styled(List)>
          </LexiconList>
        </div>
      </Card>
    </CardWrapper>
  </Styled(CardWrapper)>
</Lexicon>
`;

exports[`renders correct content for 3 columns lexicon 1`] = `
<Lexicon
  data={
    Array [
      Object {
        "c1": 1,
        "c2": 0,
        "w": "one",
      },
      Object {
        "c1": 0,
        "c2": 2,
        "w": "two",
      },
      Object {
        "c1": 2,
        "c2": 1,
        "w": "three",
      },
    ]
  }
  mode="lexicon3"
>
  <Styled(CardWrapper)
    border="primary"
    squareCorner={true}
  >
    <CardWrapper
      border="primary"
      className="sc-AxjAm cBrofV"
      squareCorner={true}
    >
      <Card
        body={false}
        border="primary"
        className="sc-AxjAm cBrofV"
      >
        <div
          className="sc-AxjAm cBrofV card border-primary"
        >
          <Styled(PanelHeader)
            bg="primary"
          >
            <PanelHeader
              bg="primary"
              className="sc-AxirZ KLmEG"
            >
              <CardHeader
                className="bg-primary text-white sc-AxirZ KLmEG"
              >
                <div
                  className="bg-primary text-white sc-AxirZ KLmEG card-header"
                >
                  <styled.div
                    noHover={true}
                  >
                    <div
                      className="sc-AxiKw JqPCR"
                    >
                      <styled.div>
                        <div
                          className="sc-AxhCb hnNexo"
                        >
                          Word
                        </div>
                      </styled.div>
                      <styled.div>
                        <div
                          className="sc-AxhUy erRXhU"
                        >
                          Qty1
                        </div>
                      </styled.div>
                      <styled.div>
                        <div
                          className="sc-AxhUy erRXhU"
                        >
                          Qty2
                        </div>
                      </styled.div>
                    </div>
                  </styled.div>
                </div>
              </CardHeader>
            </PanelHeader>
          </Styled(PanelHeader)>
          <LexiconList
            itemCount={3}
          >
            <Styled(List)
              height={120}
              itemCount={3}
              itemSize={40}
              width="100%"
            >
              <List
                className="sc-AxmLO cbeSvm"
                direction="ltr"
                height={120}
                itemCount={3}
                itemSize={40}
                layout="vertical"
                overscanCount={2}
                useIsScrolling={false}
                width="100%"
              >
                <div
                  className="sc-AxmLO cbeSvm"
                  onScroll={[Function]}
                  style={
                    Object {
                      "WebkitOverflowScrolling": "touch",
                      "direction": "ltr",
                      "height": 120,
                      "overflow": "auto",
                      "position": "relative",
                      "width": "100%",
                      "willChange": "transform",
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "height": 120,
                        "pointerEvents": undefined,
                        "width": "100%",
                      }
                    }
                  >
                    <LexiconRow
                      index={0}
                      key="0"
                      style={
                        Object {
                          "height": 40,
                          "left": 0,
                          "position": "absolute",
                          "top": 0,
                          "width": "100%",
                        }
                      }
                    >
                      <WrapLink
                        item={
                          Object {
                            "c1": 1,
                            "c2": 0,
                            "w": "one",
                          }
                        }
                      >
                        <styled.div
                          style={
                            Object {
                              "height": 40,
                              "left": 0,
                              "position": "absolute",
                              "top": 0,
                              "width": "100%",
                            }
                          }
                        >
                          <div
                            className="sc-AxiKw fQaUdy"
                            style={
                              Object {
                                "height": 40,
                                "left": 0,
                                "position": "absolute",
                                "top": 0,
                                "width": "100%",
                              }
                            }
                          >
                            <styled.div>
                              <div
                                className="sc-AxhCb hnNexo"
                              >
                                one
                              </div>
                            </styled.div>
                            <styled.div>
                              <div
                                className="sc-AxhUy erRXhU"
                              >
                                1
                              </div>
                            </styled.div>
                            <styled.div>
                              <div
                                className="sc-AxhUy erRXhU"
                              >
                                0
                              </div>
                            </styled.div>
                          </div>
                        </styled.div>
                      </WrapLink>
                    </LexiconRow>
                    <LexiconRow
                      index={1}
                      key="1"
                      style={
                        Object {
                          "height": 40,
                          "left": 0,
                          "position": "absolute",
                          "top": 40,
                          "width": "100%",
                        }
                      }
                    >
                      <WrapLink
                        item={
                          Object {
                            "c1": 0,
                            "c2": 2,
                            "w": "two",
                          }
                        }
                      >
                        <styled.div
                          style={
                            Object {
                              "height": 40,
                              "left": 0,
                              "position": "absolute",
                              "top": 40,
                              "width": "100%",
                            }
                          }
                        >
                          <div
                            className="sc-AxiKw fQaUdy"
                            style={
                              Object {
                                "height": 40,
                                "left": 0,
                                "position": "absolute",
                                "top": 40,
                                "width": "100%",
                              }
                            }
                          >
                            <styled.div>
                              <div
                                className="sc-AxhCb hnNexo"
                              >
                                two
                              </div>
                            </styled.div>
                            <styled.div>
                              <div
                                className="sc-AxhUy erRXhU"
                              >
                                0
                              </div>
                            </styled.div>
                            <styled.div>
                              <div
                                className="sc-AxhUy erRXhU"
                              >
                                2
                              </div>
                            </styled.div>
                          </div>
                        </styled.div>
                      </WrapLink>
                    </LexiconRow>
                    <LexiconRow
                      index={2}
                      key="2"
                      style={
                        Object {
                          "height": 40,
                          "left": 0,
                          "position": "absolute",
                          "top": 80,
                          "width": "100%",
                        }
                      }
                    >
                      <WrapLink
                        item={
                          Object {
                            "c1": 2,
                            "c2": 1,
                            "w": "three",
                          }
                        }
                      >
                        <styled.div
                          style={
                            Object {
                              "height": 40,
                              "left": 0,
                              "position": "absolute",
                              "top": 80,
                              "width": "100%",
                            }
                          }
                        >
                          <div
                            className="sc-AxiKw fQaUdy"
                            style={
                              Object {
                                "height": 40,
                                "left": 0,
                                "position": "absolute",
                                "top": 80,
                                "width": "100%",
                              }
                            }
                          >
                            <styled.div>
                              <div
                                className="sc-AxhCb hnNexo"
                              >
                                three
                              </div>
                            </styled.div>
                            <styled.div>
                              <div
                                className="sc-AxhUy erRXhU"
                              >
                                2
                              </div>
                            </styled.div>
                            <styled.div>
                              <div
                                className="sc-AxhUy erRXhU"
                              >
                                1
                              </div>
                            </styled.div>
                          </div>
                        </styled.div>
                      </WrapLink>
                    </LexiconRow>
                  </div>
                </div>
              </List>
            </Styled(List)>
          </LexiconList>
        </div>
      </Card>
    </CardWrapper>
  </Styled(CardWrapper)>
</Lexicon>
`;

exports[`renders correct content for empty data 1`] = `
<Lexicon
  data={Array []}
  mode="lexicon2"
>
  <Styled(CardWrapper)
    border="primary"
    squareCorner={true}
  >
    <CardWrapper
      border="primary"
      className="sc-AxjAm cBrofV"
      squareCorner={true}
    >
      <Card
        body={false}
        border="primary"
        className="sc-AxjAm cBrofV"
      >
        <div
          className="sc-AxjAm cBrofV card border-primary"
        >
          <Styled(PanelHeader)
            bg="primary"
          >
            <PanelHeader
              bg="primary"
              className="sc-AxirZ KLmEG"
            >
              <CardHeader
                className="bg-primary text-white sc-AxirZ KLmEG"
              >
                <div
                  className="bg-primary text-white sc-AxirZ KLmEG card-header"
                >
                  <styled.div
                    noHover={true}
                  >
                    <div
                      className="sc-AxiKw JqPCR"
                    >
                      <styled.div>
                        <div
                          className="sc-AxhCb hnNexo"
                        >
                          Word
                        </div>
                      </styled.div>
                      <styled.div>
                        <div
                          className="sc-AxhUy erRXhU"
                        >
                          Qty
                        </div>
                      </styled.div>
                    </div>
                  </styled.div>
                </div>
              </CardHeader>
            </PanelHeader>
          </Styled(PanelHeader)>
          <LexiconList
            itemCount={0}
          >
            <Styled(List)
              height={0}
              itemCount={0}
              itemSize={40}
              width="100%"
            >
              <List
                className="sc-AxmLO cbeSvm"
                direction="ltr"
                height={0}
                itemCount={0}
                itemSize={40}
                layout="vertical"
                overscanCount={2}
                useIsScrolling={false}
                width="100%"
              >
                <div
                  className="sc-AxmLO cbeSvm"
                  onScroll={[Function]}
                  style={
                    Object {
                      "WebkitOverflowScrolling": "touch",
                      "direction": "ltr",
                      "height": 0,
                      "overflow": "auto",
                      "position": "relative",
                      "width": "100%",
                      "willChange": "transform",
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "height": 0,
                        "pointerEvents": undefined,
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </List>
            </Styled(List)>
          </LexiconList>
        </div>
      </Card>
    </CardWrapper>
  </Styled(CardWrapper)>
</Lexicon>
`;
